# CMakeList.txt : CMake project for ningyuan, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ningyuan")

# Add source to this project's executable.
add_executable (ningyuan "ningyuan.cpp" "ningyuan.h")



# TODO: Add tests and install targets if needed.
